grallery page top back button created refs #7

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -192,6 +192,10 @@
 
     </div>
     <!-- /.container -->
+
+    <!-- 画面トップへ戻るボタン -->
+    <p id="page-top"><a href="#wrap"><span class="glyphicon glyphicon-menu-up" aria-hidden="true"></span> PAGE TOP</a></p>
+
     <!-- jQuery Version 1.11.0 -->
     <script src="/js/jquery-1.11.0.js"></script>
 
@@ -210,17 +214,10 @@
     <script src="/js/glisse.js"></script>
 
     <!-- glisse pulgin -->
-    <script>
-    $(function () {
-        $('.pics').glisse({
-            changeSpeed: 550, 
-            speed: 500,
-            effect:'rotate',
-            fullscreen: false,
-            disablindRightClick: false
-        }); 
-    });
-    </script>
+    <script type="text/javascript" src="/js/gallery.js"></script>
+
+    <!-- page top back button jQuery-->
+    <script type="text/javascript" src="/js/page_top.js"></script>
 
 </body>
 
