--- a/contact/index.html
+++ b/contact/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Webデザイナー石坂太一のポートフォリオサイトです。今までの作成したサイト及び、作品類を掲載しております。webデザイン、コーディングなどが得意です。">
     <meta name="keywords" content="stone-rise,ポートフォリオ,イラスト,Webデザイナー">
     <meta name="format-detection" content="telephone=no, email=no, address=no">
-    <title>stone-rise | Profile</title>
+    <title>stone-rise | Contact</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
