progressbar edit refs #8

--- a/profile/index.html
+++ b/profile/index.html
@@ -387,97 +387,97 @@
                         <!-- html skill -->
                         <h3 class="bg-primary skill_title text-center">html</h3>
                         <div class="progress progress-striped active">
-                            <div class="progress-bar html_skill"></div>
+                            <div class="progress-bar html_skill">80%</div>
                         </div><!-- /.html skill -->
 
                         <!-- css skill -->
                         <h3 class="bg-primary skill_title text-center">css</h3>
                         <div class="progress progress-striped active">
-                            <div class="progress-bar css_skill"></div>
+                            <div class="progress-bar css_skill">80%</div>
                         </div><!-- /.css skill -->
 
                         <!-- jQuery skill -->
                         <h3 class="bg-primary skill_title text-center">jQuery</h3>
                         <div class="progress progress-striped active">
-                            <div class="progress-bar jquery_skill"></div>
+                            <div class="progress-bar jquery_skill">40%</div>
                         </div><!-- /.jQuery skill -->
 
                         <!-- bootstrap skill -->
                         <h3 class="bg-primary skill_title text-center">bootstrap</h3>
                         <div class="progress progress-striped active">
-                            <div class="progress-bar bootstrap_skill"></div>
+                            <div class="progress-bar bootstrap_skill">50%</div>
                         </div><!-- /.bootstrap skill -->
 
                         <!-- Linux skill -->
                         <h3 class="bg-primary skill_title text-center">Linux</h3>
                         <div class="progress progress-striped active">
-                            <div class="progress-bar linux_skill"></div>
+                            <div class="progress-bar linux_skill">30%</div>
                         </div><!-- /.Linux skill -->
 
                         <!-- vagrant skill -->
                         <h3 class="bg-primary skill_title text-center">vagrant</h3>
                         <div class="progress progress-striped active">
-                            <div class="progress-bar vagrant_skill"></div>
+                            <div class="progress-bar vagrant_skill">45%</div>
                         </div><!-- /.vagrant skill -->
 
                         <!-- javascript skill -->
                         <h3 class="bg-primary skill_title text-center">javascript</h3>
                         <div class="progress progress-striped active">
-                            <div class="progress-bar javascript_skill"></div>
+                            <div class="progress-bar javascript_skill">20%</div>
                         </div><!-- /.javascript skill -->
 
                         <!-- php skill -->
                         <h3 class="bg-primary skill_title text-center">php</h3>
                         <div class="progress progress-striped active">
-                            <div class="progress-bar php_skill"></div>
+                            <div class="progress-bar php_skill">15%</div>
                         </div><!-- /.php skill -->
 
                         <!-- Ruby on Rails skill -->
                         <h3 class="bg-primary skill_title text-center">Ruby on Rails</h3>
                         <div class="progress progress-striped active">
-                            <div class="progress-bar rails_skill"></div>
+                            <div class="progress-bar rails_skill">18%</div>
                         </div><!-- /.Ruby on Rails skill -->
 
                         <!-- server skill -->
                         <h3 class="bg-primary skill_title text-center">VPS server</h3>
                         <div class="progress progress-striped active">
-                            <div class="progress-bar vps_skill"></div>
+                            <div class="progress-bar vps_skill">50%</div>
                         </div><!-- /.server skill -->
 
                         <!-- MySQL skill -->
                         <h3 class="bg-primary skill_title text-center">MySQL</h3>
                         <div class="progress progress-striped active">
-                            <div class="progress-bar mysql_skill"></div>
+                            <div class="progress-bar mysql_skill">48%</div>
                         </div><!-- /.MySQL skill -->
 
                         <!-- git skill -->
                         <h3 class="bg-primary skill_title text-center">Git</h3>
                         <div class="progress progress-striped active">
-                            <div class="progress-bar git_skill"></div>
+                            <div class="progress-bar git_skill">58%</div>
                         </div><!-- /.git skill -->
 
                         <!-- photoshop skill -->
                         <h3 class="bg-primary skill_title text-center">Photoshop</h3>
                         <div class="progress progress-striped active">
-                            <div class="progress-bar photoshop_skill"></div>
+                            <div class="progress-bar photoshop_skill">75%</div>
                         </div><!-- /.git skill -->
 
                         <!-- Illustrator skill -->
                         <h3 class="bg-primary skill_title text-center">Illustrator</h3>
                         <div class="progress progress-striped active">
-                            <div class="progress-bar illustrator_skill"></div>
+                            <div class="progress-bar illustrator_skill">56%</div>
                         </div><!-- /.git skill -->
 
                         <!-- Flash skill -->
                         <h3 class="bg-primary skill_title text-center">Flash</h3>
                         <div class="progress progress-striped active">
-                            <div class="progress-bar flash_skill"></div>
+                            <div class="progress-bar flash_skill">8%</div>
                         </div><!-- /.git skill -->
 
                         <!-- SAI skill -->
                         <h3 class="bg-primary skill_title text-center">SAI</h3>
                         <div class="progress progress-striped active">
-                            <div class="progress-bar sai_skill"></div>
+                            <div class="progress-bar sai_skill">80%</div>
                         </div><!-- /.git skill -->
 
                     </div>
