slide edit refs #4

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner slide_accordion">
             <div class="item">
-                <div class="fill"><img src="/images/slide_accordion/test_stone-rise_03.png" height="1080" width="1920" alt="works画像"></div>
+                <div class="fill"><img src="/images/slide_accordion/test_stone-rise_02.png" alt="works画像"></div>
                 <div class="carousel-caption">
                     <h2>Home</h2>
                 </div>
