works page edit refs #6

--- a/works/index.html
+++ b/works/index.html
@@ -109,7 +109,8 @@
             </div>
             <div class="col-md-6">
                 <h3 class="web_site">おまたモータース</h3>
-                <p>Webデザインを学び始めた頃に制作しました。山梨県富士吉田市にあるバイク屋さんのサイトです。コーディングとデザインの担当を行いました。</p>
+                <p>Webデザインを学び始めた頃に制作しました。山梨県富士吉田市にあるバイク屋さんのサイトです。コーディングとデザインの担当を行いました。<br>
+                <small class="attention">※現在、HPリニューアル中です。</small></p>
                 <a class="btn btn-primary site_view" target="_blank" title="別ウインドウで開きます" href="http://omata.mydns.jp/">site view</i></a>
             </div>
         </div><!-- /.row -->
@@ -127,6 +128,26 @@
                 <h3 class="web_site">pratica</h3>
                 <p>職業訓練中のサイト制作で作成しました。架空のパスタ専門店の紹介サイトです。企画から実際のイタリアンレストランに行き内装の写真を撮影して、画像の作成、コーディング、サーバの設置までを行いました。</p>
                 <a class="btn btn-primary site_view" target="_blank" title="別ウインドウで開きます" href="http://test-akisute.stone-rise.com/">site view</i></a>
+            </div>
+        </div><!-- /.row -->
+
+
+        <hr>
+
+        <div class="row">
+            <div class="col-md-6">
+                <a target="_blank" title="別ウインドウで開きます" href="http://test-lapis-crus.stone-rise.com/">
+                    <img class="img-responsive img-hover" src="/images/web_site/lapis.png" height="300" width="700" alt="">
+                </a>
+            </div>
+            <div class="col-md-6">
+                <h3 class="web_site">lapis-crus</h3>
+                <p>
+                職業訓練中のグループ制作で作成しました。
+                生徒さんの中でネット販売を行う方がいらっしゃって、その方のLPのデザインを行いました。
+                それぞれがディレクションから企画、画像の作成、flashでのアニメーション作成、コーディング、サーバの設置までを行いました。<br>
+                <small class="attention">※実際に稼働はしていません。</small></p>
+                <a class="btn btn-primary site_view" target="_blank" title="別ウインドウで開きます" href="http://test-lapis-crus.stone-rise.com/">site view</i></a>
             </div>
         </div><!-- /.row -->
 
