HP edit 20150627 refs #12

--- a/contact/index.html
+++ b/contact/index.html
@@ -37,7 +37,7 @@
     <![endif]-->
 </head>
 
-<body>
+<body class="bg_image">
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top header_area" role="navigation">
@@ -94,17 +94,6 @@
             </div>
         </div>
         <!-- /.row -->
-
-        <!-- Image Header -->
-        <div class="row">
-            <div class="col-lg-12">
-                <img class="img-responsive" src="http://placehold.it/1200x300" alt="トップ画像">
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <!-- Content Row -->
-        <div class="row">
 
             <!-- 自己紹介　タイトル -->
             <div class="row">
