--- a/gallery/index.html
+++ b/gallery/index.html
@@ -28,7 +28,7 @@
     <![endif]-->
 </head>
 
-<body>
+<body class="bg_image">
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top header_area" role="navigation">
@@ -86,17 +86,9 @@
         </div>
         <!-- /.row -->
 
-        <!-- Image Header -->
         <div class="row">
             <div class="col-lg-12">
-                <img class="img-responsive" src="http://placehold.it/1200x300" alt="トップ画像">
-            </div>
-        </div>
-        <!-- /.row -->
-
-        <div class="row">
-            <div class="col-lg-12">
-                <h2 class="page-header gallery_title">Illustration
+                <h2 class="page-title gallery_title">Illustration
                     <small>制作物</small>
                 </h2>
             </div><!-- タイトル -->
