--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta name="description" content="Webデザイナー石坂太一のポートフォリオサイトです。今までの作成したサイト及び、作品類を掲載しております。webデザイン、コーディングなどが得意です。">
     <meta name="keywords" content="stone-rise,ポートフォリオ,イラスト,Webデザイナー">
     <meta name="format-detection" content="telephone=no, email=no, address=no">
-    <title>stone-rise | Works</title>
+    <meta http-equiv="refresh" content="10; URL=/works/index.html">
+    <title>stone-rise</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +28,7 @@
     <![endif]-->
 </head>
 
-<body>
+<body class="bg_image">
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top header_area" role="navigation">
@@ -67,61 +68,19 @@
         <!-- /.container -->
     </nav>
 
-    <!-- Header Carousel -->
-    <header id="myCarousel" class="carousel slide">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0"></li>
-            <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-            <li data-target="#myCarousel" data-slide-to="3"></li>
-            <li data-target="#myCarousel" data-slide-to="4"></li>
-        </ol>
 
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner slide_accordion">
-            <div class="item">
-                <div class="fill"><img src="/images/slide_accordion/test_stone-rise_03.png" height="1080" width="1920" alt="works画像"></div>
-                <div class="carousel-caption">
-                    <h2>Home</h2>
-                </div>
-            </div>
-            <div class="item active">
-                <div class="fill"><a class="fill" href="works/index.html"><img src="/images/slide_accordion/test_stone-rise_03.png" height="1080" width="1920" alt="works画像"></a></div>
-                <div class="carousel-caption">
-                    <h2>Works</h2>
-                </div>
-            </div>
-            <div class="item">
-                <div class="fill"><a class="fill" href="gallery/index.html"><img src="/images/slide_accordion/test_stone-rise_04.png" height="1080" width="1920" alt="gallery画像"></a></div>
-                <div class="carousel-caption">
-                    <h2>Gallery</h2>
-                </div>
-            </div>
-            <div class="item">
-                <div class="fill"><a class="fill" href="profile/index.html"><img src="/images/slide_accordion/test_stone-rise_05.png" height="1080" width="1920" alt="profile画像"></a></div>
-                <div class="carousel-caption">
-                    <h2>Profile</h2>
-                </div>
-            </div>
-            <div class="item">
-                <div class="fill"><a class="fill" href="contact/index.html"><img src="/images/slide_accordion/test_stone-rise_03.png" height="1080" width="1920" alt="contact画像"></a></div>
-                <div class="carousel-caption">
-                    <h2>Contact</h2>
-                </div>
-            </div>
-        </div>
-
-        <!-- Controls -->
-        <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-            <span class="icon-prev"></span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" data-slide="next">
-            <span class="icon-next"></span>
-        </a>
-    </header>
     <!-- Page Content -->
     <div class="container">
+
+        <!-- top image -->
+        <div class="row top_image">
+            <div class="col-lg-12 top_image_rise top_image_text">
+                <img class="img-responsive" src="/images/home_image/top_image.png" height="540" width="1200" alt="トップ画像">
+            </div>
+        </div><!-- top image -->
+
+        <hr>
+
         <!-- Footer -->
         <footer>
             <div class="row footer_sns">
@@ -157,6 +116,9 @@
 
     <!-- Script to Activate the Carousel -->
     <script type="text/javascript" src="/js/carousel.js"></script>
+
+    <!-- top image text -->
+    <script type="text/javascript" src="/js/main.js"></script>
 
 </body>
 
