--- a/profile/index.html
+++ b/profile/index.html
@@ -27,7 +27,7 @@
     <![endif]-->
 </head>
 
-<body>
+<body class="bg_image">
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top header_area" role="navigation">
@@ -85,21 +85,13 @@
         </div>
         <!-- /.row -->
 
-        <!-- Image Header -->
-        <div class="row">
-            <div class="col-lg-12">
-                <img class="img-responsive" src="http://placehold.it/1200x300" alt="トップ画像">
-            </div>
-        </div>
-        <!-- /.row -->
-
         <div class="row">
             <div class="col-md-8">
 
                 <!-- 自己紹介　タイトル -->
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="page-header gallery_title">自己紹介</h2>
+                        <h2 class="page-title gallery_title">自己紹介</h2>
                     </div>
                 </div><!-- /.自己紹介　タイトル -->
 
@@ -130,7 +122,7 @@
                 <!-- 参加プロジェクト -->
                 <div class="row">
                     <div class="col-md-12">
-                        <table cellspacing="0" cellpadding="0" class="table table-striped project_title">
+                        <table cellspacing="0" cellpadding="0" class="table project_title">
                             <thead>
                                 <tr>
                                     <th>期間（年・月）</th>
