--- a/works/index.html
+++ b/works/index.html
@@ -18,6 +18,7 @@
     <link href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css" rel="stylesheet" type="text/css">
     <link href="/css/default.css" rel="stylesheet" type="text/css">
     <link href="/images/public/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -26,7 +27,7 @@
     <![endif]-->
 </head>
 
-<body>
+<body class="bg_image">
 
     <!-- Navigation -->
     <nav class="navbar navbar-inverse navbar-fixed-top header_area" role="navigation">
@@ -85,18 +86,20 @@
         <!-- /.row -->
 
         <!-- Image Header -->
+        <!--
         <div class="row">
             <div class="col-lg-12">
                 <img class="img-responsive" src="http://placehold.it/1200x300" alt="">
             </div>
         </div>
+        -->
         <!-- /.row -->
 
         <!-- Service Panels -->
         <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header">制作サイト</h2>
+                <h2 class="page-title">制作サイト</h2>
             </div><!-- タイトル -->
         </div>
         <!-- /.row -->
