HP text edit refs #12

--- a/profile/index.html
+++ b/profile/index.html
@@ -104,9 +104,11 @@
                             <dt>生年月日：</dt>
                             <dd>1982年12月11日</dd>
                             <dt>略歴：</dt>
-                            <dd>漫画家を志し、日本工学院八王子専門学校の漫画コースを卒業するが、卒業後に初めてPCを操作して、その面白さに惹かれ
+                            <dd>漫画家を志し、日本工学院八王子専門学校の漫画コースを卒業するが、卒業後に初めてPCを触り、その面白さに惹かれ
                             Webデザインの勉強を始める。<br>
-                            前職は動画配信プラットフォームを使ったサービスを展開するにある会社に入り様々なプロジェクトに参加する。
+                            前職は動画配信プラットフォームを使ったサービスを展開する会社に入社する。
+                            そこで様々なプロジェクトに参加させていただきました。<br>
+                            私が大きく成長できた会社に大変感謝をしております。
                             </dd>
                         </dl>
                     </div>
@@ -159,9 +161,9 @@
                                 <tr>
                                     <td class="date_calendar">2012年7月～2012年12月</td>
                                     <td>
-                                        <h4>大手資格取得サイト：DVDコンテンツエンコード業務</h4>
+                                        <h4>DVDコンテンツエンコード業務</h4>
                                         <ul>
-                                            <li>1日DVD100枚程度をエンコード</li>
+                                            <li>1日で最高、DVD約100枚程度をエンコード</li>
                                         </ul>
                                     </td>
                                     <td>
@@ -220,7 +222,6 @@
                                         <ul>
                                             <li>タスク管理ツールを使った作業スケジュール作成</li>
                                             <li>テスター業務</li>
-                                            <li>トラブルシューティング</li>
                                             <li>クライアントとのコミュニケーション</li>
                                             <li>納品物整理</li>
                                         </ul>
@@ -288,7 +289,6 @@
                                             <li>クライアントとのコミュニケーション</li>
                                             <li>テストシナリオ作成</li>
                                             <li>テスター業務</li>
-                                            <li>トラブルシューティング</li>
                                             <li>ログ解析業務</li>
                                         </ul>
                                     </td>
@@ -336,7 +336,7 @@
                                         <h4>自社のシステムの新規開発、保守業務</h4>
                                         <ul>
                                             <li>ミャンマーメンバーのコーディングサポート</li>
-                                            <li>画面修正</li>
+                                            <li>システムの画面修正</li>
                                             <li>テストシナリオ作成</li>
                                             <li>テスター業務</li>
                                             <li>本番リリース</li>
@@ -369,7 +369,7 @@
                 <!-- skillLevel -->
                 <div class="row">
                     <div class="col-md-12">
-                        <h2 class="page-header gallery_title">スキルレベル</h2>
+                        <h2 class="page-title gallery_title">スキルレベル</h2>
                     </div>
                 </div><!-- /.skillLevel -->
 
