--- a/gallery/index.html
+++ b/gallery/index.html
@@ -88,8 +88,8 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-title gallery_title">Illustration
-                    <small>制作物</small>
+                <h2 class="page-title gallery_title">
+                    <small>Illustration 制作物</small>
                 </h2>
             </div><!-- タイトル -->
         </div>
@@ -113,8 +113,8 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header gallery_title">Convenience store
-                    <small>POP制作</small>
+                <h2 class="page-title gallery_title">
+                    <small>Convenience store POP制作</small>
                 </h2>
             </div><!-- タイトル -->
         </div>
@@ -138,8 +138,8 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h2 class="page-header gallery_title">Drawing
-                    <small>デッサン</small>
+                <h2 class="page-header gallery_title">
+                    <small>Drawing デッサン</small>
                 </h2>
             </div><!-- タイトル -->
         </div>
