--- a/works/index.html
+++ b/works/index.html
@@ -111,7 +111,7 @@
                 </a>
             </div>
             <div class="col-md-6">
-                <h3 class="web_site">おまたモータース</h3>
+                <h3 class="web_site">オマタモータース</h3>
                 <p>Webデザインを学び始めた頃に制作しました。山梨県富士吉田市にあるバイク屋さんのサイトです。コーディングとデザインの担当を行いました。<br>
                 <small class="attention">※現在、HPリニューアル中です。</small></p>
                 <a class="btn btn-primary site_view" target="_blank" title="別ウインドウで開きます" href="http://omata.mydns.jp/">site view</i></a>
