--- a/works/index.html
+++ b/works/index.html
@@ -49,16 +49,16 @@
                         <a href="/">Home</a>
                     </li>
                     <li>
-                        <a href="/works/index.html">works</a>
+                        <a href="/works/">works</a>
                     </li>
                     <li>
-                        <a href="/gallery/index.html">Gallery</a>
+                        <a href="/gallery/">Gallery</a>
                     </li>
                     <li>
-                        <a href="/profile/index.html">Profile</a>
+                        <a href="/profile/">Profile</a>
                     </li>
                     <li>
-                        <a href="/contact/index.html">Contact</a>
+                        <a href="/contact/">Contact</a>
                     </li>
                 </ul>
             </div>
