--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Webデザイナー石坂太一のポートフォリオサイトです。今までの作成したサイト及び、作品類を掲載しております。webデザイン、コーディングなどが得意です。">
     <meta name="keywords" content="stone-rise,ポートフォリオ,イラスト,Webデザイナー">
     <meta name="format-detection" content="telephone=no, email=no, address=no">
-    <meta http-equiv="refresh" content="10; URL=/works/index.html">
+    <meta http-equiv="refresh" content="10; URL=/works/">
     <title>stone-rise</title>
 
     <!-- Bootstrap Core CSS -->
