contact page edit refs #12

--- a/contact/index.html
+++ b/contact/index.html
@@ -105,6 +105,7 @@
 
             <!-- Contact Form -->
             <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
+            <div class="row">
             <div class="col-md-8">
                 <h3 class="contact_message">現在はメール送信機能を実装していません。<br>お問い合わせがある方は直接メールでのご連絡をお願いします。</h3>
                 <form name="sentMessage" id="contactForm" novalidate>
