layout changed refs #12

--- a/contact/index.html
+++ b/contact/index.html
@@ -98,7 +98,7 @@
             <!-- 自己紹介　タイトル -->
             <div class="row">
                 <div class="col-md-12">
-                    <h2 class="page-header gallery_title">お問い合わせ</h2>
+                    <h2 class="page-title gallery_title">お問い合わせ</h2>
                 </div>
             </div><!-- /.自己紹介　タイトル -->
 
