--- a/404.html
+++ b/404.html
@@ -140,7 +140,7 @@
     <!-- Script to Activate the Carousel -->
     <script type="text/javascript" src="/js/carousel.js"></script>
 
-    <!-- google Analytics -->
+    <!-- google Analytics stone-rise.com code -->
     <script type="text/javascript">
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
