--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <!-- top image text -->
     <script type="text/javascript" src="/js/main.js"></script>
 
-    <!-- google Analytics -->
+    <!-- google Analytics stone-rise.com code -->
     <script type="text/javascript">
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
