--- a/profile/index.html
+++ b/profile/index.html
@@ -517,7 +517,7 @@
     <!-- progressbar jQuery-->
     <script type="text/javascript" src="/js/progress.js"></script>
 
-    <!-- google Analytics -->
+    <!-- google Analytics stone-rise.com code -->
     <script type="text/javascript">
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
