redmine added works page refs #18

--- a/works/index.html
+++ b/works/index.html
@@ -104,6 +104,7 @@
         </div>
         <!-- /.row -->
 
+        <!-- オマタモータース -->
         <div class="row">
             <div class="col-md-6">
                 <a target="_blank" title="別ウインドウで開きます" href="http://omata.mydns.jp/">
@@ -121,6 +122,7 @@
         <!-- 段落線 -->
         <hr>
 
+        <!-- pratica -->
         <div class="row">
             <div class="col-md-6">
                 <a target="_blank" title="別ウインドウで開きます" href="http://test-akisute.stone-rise.com/">
@@ -137,6 +139,7 @@
 
         <hr>
 
+        <!-- lapis-crus -->
         <div class="row">
             <div class="col-md-6">
                 <a target="_blank" title="別ウインドウで開きます" href="http://test-lapis-crus.stone-rise.com/">
@@ -151,6 +154,27 @@
                 それぞれがディレクションから企画、画像の作成、flashでのアニメーション作成、コーディング、サーバの設置までを行いました。<br>
                 <small class="attention">※実際に稼働はしていません。</small></p>
                 <a class="btn btn-primary site_view" target="_blank" title="別ウインドウで開きます" href="http://test-lapis-crus.stone-rise.com/">site view</i></a>
+            </div>
+        </div><!-- /.row -->
+
+
+        <hr>
+
+        <!-- redmine -->
+        <div class="row">
+            <div class="col-md-6">
+                <a target="_blank" title="別ウインドウで開きます" href="http://rm.stone-rise.com/">
+                    <img class="img-responsive img-hover" src="/images/web_site/redmine.png" height="300" width="700" alt="">
+                </a>
+            </div>
+            <div class="col-md-6">
+                <h3 class="web_site">redmine</h3>
+                <p>
+                日々のタスク管理用のredmineを自身のポートフォリオサイト内に仮想環境を建てて構築しました。
+                これにより、サイト内のページ更新履歴が残せるのでいつなんの修正を行ったのかが分かるようになりました。
+                <br>
+                <small class="attention">※個人のタスク管理なので実際にはログインできません。</small></p>
+                <a class="btn btn-primary site_view" target="_blank" title="別ウインドウで開きます" href="http://rm.stone-rise.com/">site view</i></a>
             </div>
         </div><!-- /.row -->
 
