--- a/works/index.html
+++ b/works/index.html
@@ -188,6 +188,7 @@
                     <ul class="list-inline">
                         <li><a href="http://www.pixiv.net/mypage.php#id=2792758" target="_blank" title="別ウインドウで開きます"><img src="/images/public/pixiv_sns.png" height="42" width="108"></a></li>
                         <li><a href="https://www.facebook.com/taichi.ishizaka2" target="_blank" title="別ウインドウで開きます"><img src="/images/public/facebook_sns.png" height="41" width="161"></a></li>
+                        <li><a href="http://qiita.com/taiti/items/6460795e4fd6522be207" target="_blank" title="別ウインドウで開きます"><img src="/images/public/qiita-sns.png" height="43"></a></li>
                     </ul>
                 </div>
             </div><!-- footer_sns .end -->
